<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MovieDetailsFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/poster_desc"
        android:scaleType="fitXY"
        android:src="@drawable/spider_man"
        app:layout_constraintBottom_toTopOf="@id/movieDetailsLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/movieDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="426dp"
        android:layout_gravity="bottom"
        android:background="@drawable/rounded_corners"> <!-- Set rounded corners as the background -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            >

            <TextView
                android:id="@+id/movie_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie2"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintEnd_toStartOf="@+id/bookmark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/rating_icon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="@string/starIcon"
                app:layout_constraintBottom_toTopOf="@+id/linearForType"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_name"
                android:src="@drawable/baseline_star_24" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_name"
                android:textColor="@color/grey1"
                android:textSize="14sp"
                android:layout_marginStart="5dp"
                app:layout_constraintBottom_toBottomOf="@id/rating_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/rating_icon"
                app:layout_constraintTop_toTopOf="@+id/rating_icon"
                 />


            <ImageView
                android:id="@+id/bookmark"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/bookmark"

                android:src="@drawable/baseline_bookmark_border_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/length_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearForType"
                android:text="@string/length"
                android:textColor="@color/grey1"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf = "@+id/linearForType"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>

            <TextView
                android:id="@+id/language_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearForType"
                android:layout_toEndOf="@id/length_text"
                android:text="@string/lang"
                android:textColor="@color/grey1"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                app:layout_constraintStart_toEndOf="@+id/length"
                app:layout_constraintBottom_toBottomOf="@+id/length_text"

                />

            <TextView
                android:id="@+id/length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/length_text"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/length_text" />

            <TextView
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/language_text"
                android:layout_toEndOf="@id/length"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="30dp"
                app:layout_constraintStart_toEndOf="@+id/length"
                app:layout_constraintTop_toBottomOf="@+id/language_text"
                 />

            <TextView
                android:id="@+id/description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/language_text"
                android:text="@string/description"
                android:textColor="@color/main_color"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/length" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/description_text"
                android:lineSpacingMultiplier="1.5"
                android:text=""
                android:textColor="@color/grey1"
                android:textSize="12sp"
                android:layout_marginTop="20dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_text" />

            <LinearLayout
                android:id="@+id/linearForType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating">

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="78dp"
        android:layout_height="57dp"
        android:contentDescription = "@string/Arrow"
        android:src="@drawable/baseline_arrow_back_24"
        android:background="@color/transparent"/>
</FrameLayout>
